fix: cookie consent background in dark mode

--- a/resources/css/themes/_dark.css
+++ b/resources/css/themes/_dark.css
@@ -272,7 +272,7 @@
     --theme-definition-shadow: 0 0 0.625rem rgb(0 0 0 / 50%);
 
     /* Cookie Consent */
-    --theme-cookie-consent-background: var(--color-graphite-7);
+    --theme-cookie-consent-background: var(--color-black);
     --theme-cookie-consent-color: var(--color-grey-1);
     --theme-cookie-consent-shadow: 0 0 10px rgb(0 0 0 / 50%);
 
